[project]
name = "asya-cli"
version = "0.1.0"
description = "Command-line developer tools for debugging and operating Asya framework"
requires-python = ">=3.9"
dependencies = ["requests", "tqdm", "pyyaml"]

[project.scripts]
asya = "asya_cli.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = {} }

[dependency-groups]
dev = ["types-pyyaml>=6.0.12.20250915"]
test = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "coverage>=7.0.0"]
